# kannix

./: .gitignore  README.md  dev-config.json  dev-seed.py  flake.nix  module.nix  package.nix  pyproject.toml
.pi/plans/: 808e74ed.md  a1ec24cb.md
src/kannix/: __init__.py  app.py  auth.py  config.py  ctl.py  deps.py  git.py  hooks.py  main.py  state.py  tickets.py  tmux.py
src/kannix/api/: __init__.py  admin.py  auth.py  columns.py  repos.py  terminal.py  tickets.py  views.py
src/kannix/static/: base.css
src/kannix/static/themes/: dracula.css  light.css  midnight.css  nord.css  solarized.css
src/kannix/templates/: base.html  board.html  diff.html  login.html  repos.html  ticket.html
src/kannix/templates/partials/: diff_view.html  repo_row.html  ticket_card.html  ticket_fields.html  ticket_repos.html
tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_repos.py  test_api_tickets.py  test_app.py  test_archive_backup.py  test_auth.py  test_config.py  test_ctl.py  test_git_config.py  test_git_manager.py  test_hooks.py  test_polish.py  test_state.py  test_themes.py  test_ticket_hooks_integration.py  test_tickets.py  test_tmux.py  test_vendor.py  test_views.py  test_views_htmx.py  test_views_repos.py  test_views_terminal.py
