[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kannix"
version = "0.1.0"
description = "Kanban board with terminal sessions"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "jinja2>=3.1",
  "bcrypt>=4.0",
]

[project.scripts]
kannix = "kannix.main:main"
kannix-ctl = "kannix.ctl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kannix = ["templates/**/*.html", "static/**/*.css", "static/vendor/*"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "RUF",  # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
